--- a/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
+++ b/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
@@ -4,7 +4,7 @@
   class="mt-8 space-y-8"
   novalidate
 >
-  <div *ngIf="apiError" class="rounded-md bg-red-50 p-4">
+  <div *ngIf="apiError" #apiErrorDiv class="rounded-md bg-red-50 p-4" tabindex="-1">
     <p class="text-sm font-medium text-red-800">{{ apiError }}</p>
   </div>
 
@@ -27,7 +27,7 @@
         <div
           *ngIf="
             patientForm.get('fullName')?.invalid &&
-            patientForm.get('fullName')?.touched
+            (patientForm.get('fullName')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -55,7 +55,8 @@
         />
         <div
           *ngIf="
-            patientForm.get('cpf')?.invalid && patientForm.get('cpf')?.touched
+            patientForm.get('cpf')?.invalid && 
+            (patientForm.get('cpf')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -82,7 +83,7 @@
         <div
           *ngIf="
             patientForm.get('birthDate')?.invalid &&
-            patientForm.get('birthDate')?.touched
+            (patientForm.get('birthDate')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -109,6 +110,17 @@
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
           placeholder="00000-000"
         />
+        <div
+          *ngIf="
+            patientForm.get('cep')?.invalid &&
+            (patientForm.get('cep')?.touched || buttonTouched)
+          "
+          class="mt-1 text-xs text-red-600"
+        >
+          <span *ngIf="patientForm.get('cep')?.errors?.['required']"
+            >Campo obrigatório.</span
+          >
+        </div>
       </div>
 
       <div class="sm:col-span-4">
@@ -203,7 +215,7 @@
         <div
           *ngIf="
             patientForm.get('email')?.invalid &&
-            patientForm.get('email')?.touched
+            (patientForm.get('email')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -231,7 +243,7 @@
         <div
           *ngIf="
             patientForm.get('password')?.invalid &&
-            patientForm.get('password')?.touched
+            (patientForm.get('password')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -262,7 +274,7 @@
         <div
           *ngIf="
             patientForm.get('confirmPassword')?.invalid &&
-            patientForm.get('confirmPassword')?.touched
+            (patientForm.get('confirmPassword')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
@@ -286,7 +298,7 @@
     >
       Já tenho conta
     </a>
-    <button
+    <button (mouseenter)="buttonTouched = true"
       type="submit"
       [disabled]="patientForm.invalid || isLoading"
       class="rounded-md border border-transparent bg-violet-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2"
