fix(spiral-test): typo in spiral-test-paper html

--- a/frontend/src/app/features/dashboard/components/spiral-test-paper/spiral-test-paper.html
+++ b/frontend/src/app/features/dashboard/components/spiral-test-paper/spiral-test-paper.html
@@ -35,30 +35,24 @@
     <h2 class="text-xl font-semibold text-indigo-800">
       Instruções Importantes
     </h2>
-    <ul class="mt-4 list-inside list-disc space-y-2 text-indigo-700">
+    <ol type="1" class="mt-4 list-inside list-disc space-y-2 text-indigo-700">
       <li>
-        <span class="font-medium">1. Imprima o modelo:</span>
-        <a
-          href="/assets/spiral_template.jpg"
-          download
-          class="text-blue-600 hover:underline"
-        >
-          Clique aqui para baixar o modelo da espiral.
-        </a>
+        <span class="font-medium">Imprima o modelo:</span>
+        <a> Clique no botão abaxio para baixar o modelo da espiral. </a>
       </li>
       <li>
-        <span class="font-medium">2. Desenhe a espiral:</span> Utilize uma
-        caneta escura para desenhar a espiral sobre o modelo impresso.
+        <span class="font-medium">Desenhe a espiral:</span> Utilize uma caneta
+        escura para desenhar a espiral sobre o modelo impresso.
       </li>
       <li>
-        <span class="font-medium">3. Tire uma foto nítida:</span> Certifique-se
-        de que a foto esteja bem iluminada, sem sombras e focada na espiral.
+        <span class="font-medium">Tire uma foto nítida:</span> Certifique-se de
+        que a foto esteja bem iluminada, sem sombras e focada na espiral.
       </li>
       <li>
-        <span class="font-medium">4. Envie sua foto:</span> Utilize a área
-        abaixo para fazer o upload da imagem.
+        <span class="font-medium">Envie sua foto:</span> Utilize a área abaixo
+        para fazer o upload da imagem.
       </li>
-    </ul>
+    </ol>
     <a
       href="/assets/spiral_template.jpg"
       download="spiral_template.jpg"
